--- a/src/css/imports/title.less
+++ b/src/css/imports/title.less
@@ -1,27 +1,27 @@
-.jwplayer {
+.jwplayer, .jw-error {
 
-  .jw-title {
-    display: none;
-    position: absolute;
-    width:100%;
+    .jw-title {
+        display: none;
+        position: absolute;
+        width:100%;
 
-    font-size: 1.1em;
-    height: 5.5em;
-    background: linear-gradient(to bottom, rgba(0,0,0,1) 0, rgba(0,0,0,1) 18%, rgba(0,0,0,0) 100%)
-  }
+        font-size: 1.1em;
+        height: 5.5em;
+        background: linear-gradient(to bottom, rgba(0,0,0,1) 0, rgba(0,0,0,1) 18%, rgba(0,0,0,0) 100%)
+    }
 
-  // if we set color on the parent, it is overwritten by the reset
-  .jw-title-primary,
-  .jw-title-secondary {
-    padding: @ui-margin/2 @ui-margin;
-    width: 75%;
-    color: white;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow-x: hidden;
-  }
+    // if we set color on the parent, it is overwritten by the reset
+    .jw-title-primary,
+    .jw-title-secondary {
+        padding: @ui-margin/2 @ui-margin;
+        width: 75%;
+        color: @font-color;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow-x: hidden;
+    }
 
-  .jw-title-secondary {
-    margin-top: -.5em;
-  }
+    .jw-title-secondary {
+        margin-top: -.5em;
+    }
 }
